--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "abujohnelias",
-    "short_name": "abujohnelias",
+    "name": "abu_portfolio",
+    "short_name": "abu_portfolio",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
